@@ -1,4 +1,4 @@
-#if WindowsCE
+#if WindowsCE || PocketPC
 
 // 
 // System.Web.HttpUtility
