@@ -33,7 +33,7 @@ using System.Runtime.InteropServices;
 //////////////////////////////////////////////////////////////////////
 namespace Google.GData.Client
 {
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else 
     //////////////////////////////////////////////////////////////////////
     /// <summary>TypeConverter, so that AtomEntry shows up in the property pages
