@@ -30,7 +30,7 @@ using System.Runtime.InteropServices;
 //////////////////////////////////////////////////////////////////////
 namespace Google.GData.Client
 {
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else
     //////////////////////////////////////////////////////////////////////
     /// <summary>TypeConverter, so that AtomHead shows up in the property pages
@@ -83,7 +83,7 @@ namespace Google.GData.Client
     /// <summary>generic Person object, used for the feed and for the entry
     /// </summary> 
     //////////////////////////////////////////////////////////////////////
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else
     [TypeConverterAttribute(typeof(AtomPersonConverter)), DescriptionAttribute("Expand to see the person object for the feed/entry.")]
 #endif
