@@ -149,7 +149,7 @@ namespace Google.GData.Spreadsheets
                 }
             }
         }
-#if WindowsCE
+#if WindowsCE || PocketPC
 #else
 
         /// <summary>
